--- a/project/templates/pa1_website_userCheckin.html
+++ b/project/templates/pa1_website_userCheckin.html
@@ -76,15 +76,15 @@
         checks into
         <input type="text" name="checksinBusiness_id" placeholder="(business_id)">
         on<br>
-          <input type="radio" name="options" value="Monday" checked> Monday<br>
-  			<input type="radio" name="options" value="Tuesday"> Tuesday<br>
-		<input type="radio" name="options" value="Wednesday" checked> Wednesday<br>
-  			<input type="radio" name="options" value="Thursday"> Thursday<br>
-		<input type="radio" name="options" value="Friday" checked> Friday<br>
-  			<input type="radio" name="options" value="Saturday"> Saturday<br>
-		<input type="radio" name="options" value="Sunday" checked> Sunday<br>
+          <input type="radio" name="options" value="monday" checked> Monday<br>
+  			<input type="radio" name="options" value="tuesday"> Tuesday<br>
+		<input type="radio" name="options" value="wednesday" checked> Wednesday<br>
+  			<input type="radio" name="options" value="thursday"> Thursday<br>
+		<input type="radio" name="options" value="friday" checked> Friday<br>
+  			<input type="radio" name="options" value="saturday"> Saturday<br>
+		<input type="radio" name="options" value="sunday" checked> Sunday<br>
         ,
-        <input type="text" name="checksinDate" size="10" placeholder="(DD/MM/YYYY)">
+        <input type="text" name="checksinDate" size="10" placeholder="(MM-DD-YYYY)">
         <br><br>
         <button>Check In</button>
     </form>
