--- a/project/templates/pa1_website_writeReview.html
+++ b/project/templates/pa1_website_writeReview.html
@@ -70,7 +70,7 @@
 </div>
 <div id="queries">
 
-    <form action="/write_review" method="POST">
+    <form action="/write_reviews" method="POST">
         Write Review<br><br>
         User ID:
         <input type="text" name="reviewUser_id" placeholder="(user_id)">
@@ -82,7 +82,7 @@
         <input type="radio" name="options" value="3" checked> 3 Star<br>
         <input type="radio" name="options" value="4"> 4 Star<br>
         <input type="radio" name="options" value="5" checked> 5 Star<br>
-        <input type="text" name="checksinDate" size="10" placeholder="(DD/MM/YYYY)">
+        <input type="text" name="checksinDate" size="10" placeholder="(MM-DD-YYYY)">
         <br><br>
         <textarea rows="25" cols="100" placeholder="review text" name="text"></textarea>
         <br><br>
