--- a/project/templates/pa1_website_userCheckin.html
+++ b/project/templates/pa1_website_userCheckin.html
@@ -39,9 +39,10 @@
         <h1>CS460 PA1</h1>
         <p>Mina Horner and Ethan Timoteo</p>
         <div class="topnav">
-            <a class="active" href="{{ url_for('homepage') }}">Query</a>
+            <a class="active" href="{{ url_for('homepage') }}">Select</a>
             <a href="{{ url_for('check_in') }}">Checks in</a>
             <a href="{{ url_for('write_review') }}">Write Review</a>
+            <a href="{{ url_for('insertion') }}">Insert/Delete</a>
         </div>
     </header>
 </head>
@@ -88,6 +89,7 @@
         <br><br>
         <button>Check In</button>
     </form>
+
 </div>
 
 
