--- a/project/templates/pa1_website_QID_insertdelete.html
+++ b/project/templates/pa1_website_QID_insertdelete.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>CS460 PA1</title>
@@ -34,7 +33,6 @@
 				text-align: center;
 			}
 
-
     </style>
     <header id="main_header">
         <h1>CS460 PA1</h1>
@@ -69,28 +67,20 @@
 
     </p>
 </div>
-<div id="queries">
+<p>
 
-    <form action="/write_reviews" method="POST">
-        Write Review<br><br>
-        User ID:
-        <input type="text" name="reviewUser_id" placeholder="(user_id)">
-        Business ID:
-        <input type="text" name="reviewBusiness_id" placeholder="(business_id)">
-        <br>
-        <input type="radio" name="options" value="1" checked> 1 Star<br>
-        <input type="radio" name="options" value="2"> 2 Star<br>
-        <input type="radio" name="options" value="3" checked> 3 Star<br>
-        <input type="radio" name="options" value="4"> 4 Star<br>
-        <input type="radio" name="options" value="5" checked> 5 Star<br>
-        <input type="text" name="checksinDate" size="10" placeholder="(MM-DD-YYYY)">
+</p>
+<div id="queries">
+    <form action="/add_del" method="POST">
+        Insert, or Delete<br><br>
+        <textarea name="content" rows="30" cols="100"></textarea>
         <br><br>
-        <textarea rows="25" cols="100" placeholder="review text" name="text"></textarea>
-        <br><br>
-        <button>Review</button>
+        <button>Query</button>
     </form>
+
 </div>
-<div id="results">
+
+<div class="results">
     <br>
     Result
     <br>
@@ -101,8 +91,5 @@
         {% endfor %}
     </textarea>
 </div>
-
-<body>
-
 </body>
 </html>
